--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
 	<body ng-app="hello" ng-controller="AppController as ac">
 
 		<!-- With React Component ... passing in controller instance -->
-		<react-component
-				name="Hello"
-				props="ac"></react-component>
+		<react-component name="Hello" props="ac"></react-component>
 
 		<!-- With Angular Directive ... abstracting our React Component -->
 		<di-hello place="{{ac.place}}"></di-hello>
