--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
 	</head>
 	<body ng-app="hello" ng-controller="AppController as ac">
 
-		<!-- With React Component ... passing in controller instance -->
-		<react-component name="DI.App.Hello" props="ac"></react-component>
+		<!-- Example 1: With React Component ... passing in controller instance -->
+		<react-component name="hello" props="ac"></react-component>
 
-		<!-- With Angular Directive ... abstracting our React Component -->
+		<!-- Example 2: With Angular Directive ... abstracting our React Component -->
 		<di-hello place="ac.place"></di-hello>
 
 		<!-- 3rd party libs -->
